# sagacity

./: .gitignore  CLAUDE.md  Cargo.toml  MVP_POLISH.md  README.md  conversation_history.json  copy.sh  create_migrations.sh  debug.sh
.docs/: myriad-user-flow.md
.docs/tickets/bugs/: cant-scroll-and-focus-messages-at-same-time.md
.docs/tickets/features/: create-sqlite-db-and-db-details-screen.md
.docs/tickets/features/sqlite-db-integration/: create-sqlite-db-and-db-details-screen.md
.docs/tickets/features/start-a-new-project/: 1-splash-screen-and-state-update.md  2-context-ingestion-module.md  3-artifact-generation-module.md  start-a-new-project.md  (+4 more)
migrations/: 0001_create_project.sql  0001_create_project.up.sql  0001_initial_schema.sql  0002_create_project_overview.down.sql  0002_create_project_overview.sql  0002_create_project_overview.up.sql  0003_create_project_requirement.down.sql  0003_create_project_requirement.sql  0003_create_project_requirement.up.sql  0004_create_project_user_flow.down.sql  0004_create_project_user_flow.sql  0004_create_project_user_flow.up.sql  0005_create_project_user_flow_step.down.sql  0005_create_project_user_flow_step.sql  0005_create_project_user_flow_step.up.sql  0006_create_project_artifact.down.sql  0006_create_project_artifact.sql  0006_create_project_artifact.up.sql  0007_create_conversation.down.sql  0007_create_conversation.sql  0007_create_conversation.up.sql  0008_create_chat_message.down.sql  0008_create_chat_message.sql  0008_create_chat_message.up.sql  0009_create_code_snippet.down.sql  0009_create_code_snippet.sql  0009_create_code_snippet.up.sql  0010_create_paragraph.down.sql  0010_create_paragraph.sql  0010_create_paragraph.up.sql  0011_create_directory.down.sql  0011_create_directory.sql  0011_create_directory.up.sql  0012_create_file.down.sql  0012_create_file.sql  0012_create_file.up.sql  0013_create_contextualization_index.down.sql  0013_create_contextualization_index.sql  0013_create_contextualization_index.up.sql
src/: api.rs  app.rs  app_state.rs  batch_processor.rs  build.rs  chat.rs  chat_message.rs  chat_view.rs  chatbot.rs  code_snippet.rs  config.rs  constants.rs  conversation.rs  db.rs  db_details_view.rs  errors.rs  github_recommendations.rs  indexing.rs  indexing_view.rs  key_handlers.rs  lib.rs  log_view.rs  logging.rs  macros.rs  main.rs  models.rs  selection.rs  splash_screen.rs  status_indicator.rs  test_view.rs  token_manager.rs  ui.rs  utils.rs
src/dead/: app.rs  batch_processor.rs  cache.rs  mod.rs
src/ui/: chat.rs  directory_tree.rs  footer.rs  header.rs  main_menu.rs  mod.rs  placeholder.rs  quit_confirm.rs
