[package]
name = "sagacity"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
walkdir = "2.3"
tokio = { version = "1", features = ["full"] }
futures = "0.1"
colored = "2.1.0"
dialoguer = "0.11.0"
rustyline = "14.0.0"
indicatif = "0.17.8"
syntect = "5.2.0"
spinners = "4.1.1"
