[package]
name = "sagacity"
version = "0.1.2"
edition = "2021"
description = "A Rust-based project for conversing with your codebase and handling codebase contextualization"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
walkdir = "2.3"
tokio = { version = "1", features = ["full"] }
futures = "0.1"
colored = "2.1.0"
dialoguer = { version = "0.9", features = ["fuzzy-select"] }
rustyline = "14.0.0"
indicatif = "0.17.8"
syntect = "5.2.0"
spinners = "4.1.1"
termimad = "0.30.0"
cursor = "2.3.0"
textwrap = "0.16.1"
clipboard = "0.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = "1.0.210"
tempfile = "3.13.0"
regex = "1.11.0"
diff = "0.1.13"
patch = "0.7.0"
diffy = "0.4.0"
ignore = "0.4.23"
prettytable = "0.10.0"
home = "0.5.9"
shellexpand = "3.1.0"
task = "0.0.1"
claude-tokenizer = "0.3.0"
open = "5.3.0"
skim = "0.10.4"
env = "0.1.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
winit = "0.30.5"
egui = "0.29.1"
egui-wgpu = "0.29.1"
log = "0.4.22"
env_logger = "0.11.5"
sysinfo = "0.32.0"
rodio = "0.19.0"
ratatui-splash-screen = "0.1.4"
tachyonfx = "0.10.1"
unicode-width = "0.2.0"
dotenv = "0.15.0"
pulldown-cmark = "0.12.2"
lazy_static = "1.5.0"
uuid = "1.11.0"
copypasta = "0.10.1"
